--- a/styles/recipesstyles.css
+++ b/styles/recipesstyles.css
@@ -10,10 +10,26 @@ body {
    
 }
 
-html, body{
+html {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    width: 100%;
+    max-width: 100%;
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    overflow-x: hidden;
+    overflow-y: auto;
+    width: 100%;
+    max-width: 100%;
+    min-height: 100%;
 }
 
 .main_section {
